# DSA_Practice

Basics/: pyproject.toml
Basics/src/: _01_arrays_strings.py  _02_hashmap.py  _03_stack_queue.py  _04_linked_list.py  _05_recursion.py  _06_sorting.py  _07_binary_search.py
Basics/tests/: test_03_stack_queue.py
